# google-sheet-to-meilisearch-cron

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deployment-patch-file.yaml  docker-build-push.sh  job-patch-file.yaml
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
