[package]
name = "sheet-to-meilisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
tokio = { version = "1.34.0", features = ["full"] }
log = "0.4.20"
serde = "1.0.193"
dotenvy = "0.15.7"
meilisearch-sdk = "0.24.3"
anyhow = "1.0.75"
futures = "0.3.29"
google-sheets4 = "5.0.3"