[package]
name = "sheet-to-meilisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
serde = "1.0.198"
dotenvy = "0.15.7"
meilisearch-sdk = "0.25.0"
anyhow = "1.0.82"
futures = "0.3.30"
google-sheets4 = "5.0.4"
